Fix social icon overlap

--- a/styles/layout.less
+++ b/styles/layout.less
@@ -183,6 +183,7 @@ p + .Canvas {
 
 	position: fixed;
 	bottom: 32px;
+	z-index: 100;
 	right: 32px - (@focusWidth - @width) / 2;
 	display: flex;
 	align-items: center;
